--- a/app.css
+++ b/app.css
@@ -156,3 +156,30 @@ console.log(square(9))
 console.log(cal(2,9,3))
 console.log(dis(10,20,4))
 console.log(oed())
+
+let person = {
+  first_name: 'Fritz',
+  last_name: 'Nachtnebel',
+  age: '34',
+  height: '194cm',
+  money: '-1000$',
+  login: {
+    password: '12345',
+  }
+  
+  }
+
+person.address = 'Germany, berlin, Pasiser Platz';
+
+let pass = '12346';
+
+function passw(){
+  if(pass === person.login.password){
+    return `welcome ${person.first_name} ${person.last_name}`
+  } else {
+    return `The specified password ${pass} is not correct, try again.`
+  }
+}
+
+console.log(person)
+console.log(passw())
