--- a/app.css
+++ b/app.css
@@ -183,3 +183,35 @@ function passw(){
 
 console.log(person)
 console.log(passw())
+
+let arr = ['lorem', 123, true,'ipsum',]
+
+console.log(arr.length);
+console.log(arr[arr.length - 1]);
+console.log(arr[0]);
+
+arr.unshift(1,2,3,);
+arr.shift();
+arr.splice(4,5,);
+
+console.log(arr);
+
+let em = [];
+
+em.push(1,'zwei',3,false,'fem',);
+
+console.log(em);
+
+
+
+let number = [1,3,5,7,9] 
+
+number[0] = 2 
+number[1] = 4 
+number[2] = 6 
+number[3] = 8
+number[4] = 10
+
+console.log(number)
+
+number.splice(1,3)
