--- a/app.css
+++ b/app.css
@@ -1,3 +1,4 @@
+
 let E = '28.02.1999'; 
 let pi  = 3.14;
 
@@ -215,3 +216,86 @@ number[4] = 10
 console.log(number)
 
 number.splice(1,3)
+
+
+
+let Each = [10, 2762, 0.42, 192, 3, 28, 1125, 2018, 34, 66, 100]
+
+Each.forEach(function(item){
+  if ( item % 2 !== 0){
+  console.log(item) ;
+  }
+})
+
+let text = [ 'lorem ipsum', 'javascript', 'php', 'css', 'react', 'git', 'html', 'mysql' ]
+
+let text2 = text.filter(function(item, key){
+  return item.length >= 4
+})
+
+console.log(text2);
+
+
+let tall = [1, -3, 5, 6, -7, 8, 9, -11]
+
+let tall2 = tall.filter(function(item, key){
+  return item < -0
+})
+
+console.log(tall2)
+
+
+let zahlen = [10, 2762, 0.42, 192, 3, 28, 1125, 2018, 34, 66, 100]
+
+zahlen.forEach(function(item){
+  if ( item % 2 == 0){
+    console.log(item);
+  }
+})
+
+
+let wasser = [ 'lorem ipsum', 'javascript', 'php', 'css', 'react', 'git', 'html', 'mysql']
+
+let wasser2 = wasser.map(function(item, key){
+  if ( 3 < item.length ){
+    console.log(item)
+  }
+})
+
+
+let square = [5,6,7,8,9]
+
+square.forEach(function(item, key){
+  console.log(item * item)
+})
+
+
+let svar = [{a: 10, b: 5}, {a: 20, b: 22}, {a: 131, b:55}]
+
+let svar2 = svar.map(function(item, key){
+  return item.a + item.b
+})
+
+console.log(svar2)
+
+
+let minus = [-13, 0, 12, 1662, -0.32, -102, -2]
+
+let minus2 = minus.filter(function(item, key){
+  return item < -0
+})
+
+minus3 = minus2.reduce(function(sum, current){
+  return sum + current
+}, 0);
+
+console.log(minus3)
+
+
+let yes = [ {x: 10, y: "lorem"}, {x: 21, y: "lorem"}, {x: -17, y: "lorem"}, {x: 156, y : "lorem"}];
+
+yes2 = yes.reduce(function(sum, item){
+  return sum + item.x
+}, 0);
+
+console.log(yes2)
