--- a/app.css
+++ b/app.css
@@ -299,3 +299,33 @@ yes2 = yes.reduce(function(sum, item){
 }, 0);
 
 console.log(yes2)
+
+
+
+const cities = [ {name: 'Moscow', population: 12506468},{name: 'Saint Petersburg', population: 5351935},{name: 'Novosibirsk', population: 1612833},{name: 'Kaliningrad', population: 482443}, {name: 'Kaluga', population: 336726}];
+
+cities.unshift({name: 'Berlin', population: 3571000})
+cities.push({name: 'Hamburg', population: 1788000})
+
+cities.forEach(function(item){
+  console.log(`city: ${item.name}, population: ${item.population}`); 
+})
+
+
+cities2 = cities.filter(function(item){
+  return item.population > 1000000
+})
+
+console.log(cities2);
+
+cities3 = cities.map(function(item){
+ return item.population * 1.5 
+})
+
+console.log(cities3)
+
+cities4 = cities3.reduce(function(item, sum){
+  return sum + item
+},0);
+
+console.log('all cities combined', cities4)
